# spotiweekly

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: bandit.yml  linter.yml  tests.yml
backend/spotify/: api.py  authorization_api.py  utils.py
backend/tests/: conftest.py  test_helpers.py  test_views.py
backend/tests/spotify/: test_utils.py
backend/weekly/: app.py  config.py  helpers.py  views.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  consts.js  index.css  index.js
frontend/src/components/: Authentication.jsx
spotify/: api.py  authorization_api.py  client.py  consts.py  exceptions.py
spotiweekly/: app.py  config.py  package-lock.json
spotiweekly/spotify/: api.py  consts.py  exceptions.py  utils.py
spotiweekly/src/: consts.js
spotiweekly/src/components/: Authentication.jsx  Navbar.jsx
spotiweekly/static/scripts/: index.js
spotiweekly/templates/: base.html  index.html  navbar.html
spotiweekly/tests/: conftest.py  test_helpers.py  test_views.py
spotiweekly/weekly/: decorators.py  views.py
tests/: conftest.py  test_views.py
tests/spotify/: test_api.py  test_utils.py
weekly/: app.py  config.py  views.py
weekly/static/: styles.css
weekly/static/css/: uikit-rtl.min.css  uikit.min.css
weekly/static/js/: uikit-icons.min.js  uikit.min.js
weekly/templates/: base.html  index.html  navbar.html
