[tool.poetry]
name = "spotiweekly"
version = "0.1.0"
description = ""
authors = ["Mira Szewczyk <szewczyk.mira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^2.3.0"
flask = "^1.1.2"
ipython = "^7.17.0"
pytest-flask = "^1.0.0"
flask-session = "^0.3.2"
requests = "^2.24.0"
Flask-Cors = "^3.0.9"
flask-shell-ipython = "^0.4.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
bandit = "^1.6.2"
mypy = "^0.770"
pytest = "^5.4.1"
pytest-sugar = "^0.9.3"
pytest-cov = "^2.8.1"
flake8 = "^3.8.3"

[tool.black]
line-length = 90
target-version = ['py38']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 90
use_parentheses = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
